Fix problems on Firefox, (offset, position, color...)

--- a/public/css/butter.ui.less
+++ b/public/css/butter.ui.less
@@ -78,7 +78,6 @@
         cursor: crosshair;
     }
 
-
     .left-handle-line {
         left: -13px;
     }
@@ -95,7 +94,7 @@
     &.highlight {
         border-color: rgb(5, 41, 56);
     }
-    &:hover .handle-point {
+    &[selected="true"] .handle-point, &:hover .handle-point {
         display: block;
     }
 }
